compiler/testData/cli/jvm/firMultiplatformCompilationWithError.out
warning: advanced option value is passed in an obsolete form. Please use the '=' character to specify the value: -Xcommon-sources=...
warning: ATTENTION!
This build uses unsafe internal compiler arguments:

-XXLanguage:+MultiPlatformProjects

This mode is not recommended for production use,
as no stability/compatibility guarantees are given on
compiler or generated code. Use it at your own risk!

warning: ATTENTION!
 This build uses in-dev FIR:
  -Xuse-fir
compiler/testData/cli/jvm/firMultiplatformCompilationWithError/jvm.kt:1:18: error: actual class 'public abstract actual interface A : R|kotlin/Any|' has no corresponding members for expected class members:

    public abstract expect fun foo(): R|kotlin/Unit|


actual interface A
                 ^
COMPILATION_ERROR
